<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Ambu">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark">

        <ImageView
            android:id="@+id/AvisLogo"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:background="@color/colorBar"
            android:contentDescription="@string/AvisLogo"
            android:src="@drawable/avis_logo"
            app:layout_constraintBottom_toTopOf="@+id/donationtitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/avis_logo" />

        <Button
            android:id="@+id/donationtitle"
            style="@style/title"
            android:layout_width="0dp"
            android:layout_height="51dp"
            android:background="@color/colorBar"
            android:text="@string/titolo_giornate_donazioni"
            android:textColor="@color/colorTextBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/AvisLogo" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/subConstrain"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/donationtitle"
            app:layout_constraintTop_toBottomOf="@+id/donationtitle">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardOpened"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="24dp"
                android:background="@color/cardback"
                app:layout_constraintBottom_toBottomOf="@+id/scrollView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" >

                <ScrollView
                    android:id="@+id/cardScroll"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:id="@+id/cardOpenedLinearLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/titleCard"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/titlecard"
                            android:textAlignment="center"
                            android:textAllCaps="true"
                            android:textSize="@dimen/tittleDim"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/deTipoEvento"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAlignment="center"
                            android:textAllCaps="true"
                            android:textSize="@dimen/tittleDim"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/deData"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAlignment="center"
                            android:textAllCaps="true"
                            android:textColor="@color/colorTextBar"
                            android:textSize="@dimen/tittleDim"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/deDescrizione"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="@dimen/list_item_spacing"
                            android:paddingRight="@dimen/list_item_spacing"
                            android:paddingBottom="@dimen/list_item_spacing"
                            android:textAlignment="viewStart"
                            android:textSize="@dimen/testoCard" />

                        <Button
                            android:id="@+id/buttonToMap"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/cardback"
                            android:text="@string/buttonMap" />

                        <View
                            android:id="@+id/divider"
                            android:layout_width="match_parent"
                            android:layout_height="5dp"
                            android:background="@color/white" />

                        <Button
                            android:id="@+id/buttonReminder"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/cardback"
                            android:text="@string/buttonReminder" />

                    </LinearLayout>
                </ScrollView>

            </androidx.cardview.widget.CardView>

            <ScrollView
                android:id="@+id/scrollView"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/calendarLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:isScrollContainer="false"
                    android:orientation="vertical">

                </LinearLayout>
            </ScrollView>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/preferenze"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="24dp"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/setup"
                app:backgroundTint="@color/colorButton"
                app:layout_constraintBottom_toBottomOf="@+id/scrollView"
                app:layout_constraintEnd_toEndOf="parent" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/appSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="16dp"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/pork"
                app:backgroundTint="@color/colorButton"
                app:layout_constraintBottom_toTopOf="@+id/preferenze"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>